; ModuleID = '/home/carl/AnghaBench/jq/src/decNumber/extr_decNumber.c_decNumberCompareTotalMag.c'
source_filename = "/home/carl/AnghaBench/jq/src/decNumber/extr_decNumber.c_decNumberCompareTotalMag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_17__ = type { i32, i32 }

@DECBUFFER = common dso_local global i32 0, align 4
@DEC_Insufficient_storage = common dso_local global i32 0, align 4
@DECNEG = common dso_local global i32 0, align 4
@COMPTOTAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_17__* @decNumberCompareTotalMag(%struct.TYPE_17__* %0, %struct.TYPE_17__* %1, %struct.TYPE_17__* %2, i32* %3) #0 {
  %5 = alloca %struct.TYPE_17__*, align 8
  %6 = alloca %struct.TYPE_17__*, align 8
  %7 = alloca %struct.TYPE_17__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca %struct.TYPE_17__*, align 8
  %14 = alloca i64, align 8
  %15 = alloca %struct.TYPE_17__*, align 8
  %16 = alloca %struct.TYPE_17__*, align 8
  %17 = alloca %struct.TYPE_17__*, align 8
  store %struct.TYPE_17__* %0, %struct.TYPE_17__** %5, align 8
  store %struct.TYPE_17__* %1, %struct.TYPE_17__** %6, align 8
  store %struct.TYPE_17__* %2, %struct.TYPE_17__** %7, align 8
  store i32* %3, i32** %8, align 8
  store i32 0, i32* %9, align 4
  %18 = load i32, i32* @DECBUFFER, align 4
  %19 = add nsw i32 %18, 1
  %20 = call i32 @D2N(i32 %19)
  %21 = zext i32 %20 to i64
  %22 = call i8* @llvm.stacksave()
  store i8* %22, i8** %11, align 8
  %23 = alloca %struct.TYPE_17__, i64 %21, align 16
  store i64 %21, i64* %12, align 8
  store %struct.TYPE_17__* null, %struct.TYPE_17__** %13, align 8
  %24 = load i32, i32* @DECBUFFER, align 4
  %25 = add nsw i32 %24, 1
  %26 = call i32 @D2N(i32 %25)
  %27 = zext i32 %26 to i64
  %28 = alloca %struct.TYPE_17__, i64 %27, align 16
  store i64 %27, i64* %14, align 8
  store %struct.TYPE_17__* null, %struct.TYPE_17__** %15, align 8
  br label %29

29:                                               ; preds = %4
  %30 = load %struct.TYPE_17__*, %struct.TYPE_17__** %6, align 8
  %31 = call i64 @decNumberIsNegative(%struct.TYPE_17__* %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %70

33:                                               ; preds = %29
  store %struct.TYPE_17__* %23, %struct.TYPE_17__** %16, align 8
  %34 = load %struct.TYPE_17__*, %struct.TYPE_17__** %6, align 8
  %35 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @D2U(i32 %36)
  %38 = sub nsw i32 %37, 1
  %39 = sext i32 %38 to i64
  %40 = mul i64 %39, 4
  %41 = add i64 8, %40
  %42 = trunc i64 %41 to i32
  store i32 %42, i32* %10, align 4
  %43 = load i32, i32* %10, align 4
  %44 = sext i32 %43 to i64
  %45 = mul nuw i64 8, %21
  %46 = icmp ugt i64 %44, %45
  br i1 %46, label %47, label %59

47:                                               ; preds = %33
  %48 = load i32, i32* %10, align 4
  %49 = call i64 @malloc(i32 %48)
  %50 = inttoptr i64 %49 to %struct.TYPE_17__*
  store %struct.TYPE_17__* %50, %struct.TYPE_17__** %13, align 8
  %51 = load %struct.TYPE_17__*, %struct.TYPE_17__** %13, align 8
  %52 = icmp eq %struct.TYPE_17__* %51, null
  br i1 %52, label %53, label %57

53:                                               ; preds = %47
  %54 = load i32, i32* @DEC_Insufficient_storage, align 4
  %55 = load i32, i32* %9, align 4
  %56 = or i32 %55, %54
  store i32 %56, i32* %9, align 4
  br label %119

57:                                               ; preds = %47
  %58 = load %struct.TYPE_17__*, %struct.TYPE_17__** %13, align 8
  store %struct.TYPE_17__* %58, %struct.TYPE_17__** %16, align 8
  br label %59

59:                                               ; preds = %57, %33
  %60 = load %struct.TYPE_17__*, %struct.TYPE_17__** %16, align 8
  %61 = load %struct.TYPE_17__*, %struct.TYPE_17__** %6, align 8
  %62 = call i32 @decNumberCopy(%struct.TYPE_17__* %60, %struct.TYPE_17__* %61)
  %63 = load i32, i32* @DECNEG, align 4
  %64 = xor i32 %63, -1
  %65 = load %struct.TYPE_17__*, %struct.TYPE_17__** %16, align 8
  %66 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %65, i32 0, i32 0
  %67 = load i32, i32* %66, align 4
  %68 = and i32 %67, %64
  store i32 %68, i32* %66, align 4
  %69 = load %struct.TYPE_17__*, %struct.TYPE_17__** %16, align 8
  store %struct.TYPE_17__* %69, %struct.TYPE_17__** %6, align 8
  br label %70

70:                                               ; preds = %59, %29
  %71 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %72 = call i64 @decNumberIsNegative(%struct.TYPE_17__* %71)
  %73 = icmp ne i64 %72, 0
  br i1 %73, label %74, label %111

74:                                               ; preds = %70
  store %struct.TYPE_17__* %28, %struct.TYPE_17__** %17, align 8
  %75 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %76 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %75, i32 0, i32 1
  %77 = load i32, i32* %76, align 4
  %78 = call i32 @D2U(i32 %77)
  %79 = sub nsw i32 %78, 1
  %80 = sext i32 %79 to i64
  %81 = mul i64 %80, 4
  %82 = add i64 8, %81
  %83 = trunc i64 %82 to i32
  store i32 %83, i32* %10, align 4
  %84 = load i32, i32* %10, align 4
  %85 = sext i32 %84 to i64
  %86 = mul nuw i64 8, %27
  %87 = icmp ugt i64 %85, %86
  br i1 %87, label %88, label %100

88:                                               ; preds = %74
  %89 = load i32, i32* %10, align 4
  %90 = call i64 @malloc(i32 %89)
  %91 = inttoptr i64 %90 to %struct.TYPE_17__*
  store %struct.TYPE_17__* %91, %struct.TYPE_17__** %15, align 8
  %92 = load %struct.TYPE_17__*, %struct.TYPE_17__** %15, align 8
  %93 = icmp eq %struct.TYPE_17__* %92, null
  br i1 %93, label %94, label %98

94:                                               ; preds = %88
  %95 = load i32, i32* @DEC_Insufficient_storage, align 4
  %96 = load i32, i32* %9, align 4
  %97 = or i32 %96, %95
  store i32 %97, i32* %9, align 4
  br label %119

98:                                               ; preds = %88
  %99 = load %struct.TYPE_17__*, %struct.TYPE_17__** %15, align 8
  store %struct.TYPE_17__* %99, %struct.TYPE_17__** %17, align 8
  br label %100

100:                                              ; preds = %98, %74
  %101 = load %struct.TYPE_17__*, %struct.TYPE_17__** %17, align 8
  %102 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %103 = call i32 @decNumberCopy(%struct.TYPE_17__* %101, %struct.TYPE_17__* %102)
  %104 = load i32, i32* @DECNEG, align 4
  %105 = xor i32 %104, -1
  %106 = load %struct.TYPE_17__*, %struct.TYPE_17__** %17, align 8
  %107 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %106, i32 0, i32 0
  %108 = load i32, i32* %107, align 4
  %109 = and i32 %108, %105
  store i32 %109, i32* %107, align 4
  %110 = load %struct.TYPE_17__*, %struct.TYPE_17__** %17, align 8
  store %struct.TYPE_17__* %110, %struct.TYPE_17__** %7, align 8
  br label %111

111:                                              ; preds = %100, %70
  %112 = load %struct.TYPE_17__*, %struct.TYPE_17__** %5, align 8
  %113 = load %struct.TYPE_17__*, %struct.TYPE_17__** %6, align 8
  %114 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %115 = load i32*, i32** %8, align 8
  %116 = load i32, i32* @COMPTOTAL, align 4
  %117 = call i32 @decCompareOp(%struct.TYPE_17__* %112, %struct.TYPE_17__* %113, %struct.TYPE_17__* %114, i32* %115, i32 %116, i32* %9)
  br label %118

118:                                              ; preds = %111
  br label %119

119:                                              ; preds = %118, %94, %53
  %120 = load %struct.TYPE_17__*, %struct.TYPE_17__** %13, align 8
  %121 = icmp ne %struct.TYPE_17__* %120, null
  br i1 %121, label %122, label %125

122:                                              ; preds = %119
  %123 = load %struct.TYPE_17__*, %struct.TYPE_17__** %13, align 8
  %124 = call i32 @free(%struct.TYPE_17__* %123)
  br label %125

125:                                              ; preds = %122, %119
  %126 = load %struct.TYPE_17__*, %struct.TYPE_17__** %15, align 8
  %127 = icmp ne %struct.TYPE_17__* %126, null
  br i1 %127, label %128, label %131

128:                                              ; preds = %125
  %129 = load %struct.TYPE_17__*, %struct.TYPE_17__** %15, align 8
  %130 = call i32 @free(%struct.TYPE_17__* %129)
  br label %131

131:                                              ; preds = %128, %125
  %132 = load i32, i32* %9, align 4
  %133 = icmp ne i32 %132, 0
  br i1 %133, label %134, label %139

134:                                              ; preds = %131
  %135 = load %struct.TYPE_17__*, %struct.TYPE_17__** %5, align 8
  %136 = load i32, i32* %9, align 4
  %137 = load i32*, i32** %8, align 8
  %138 = call i32 @decStatus(%struct.TYPE_17__* %135, i32 %136, i32* %137)
  br label %139

139:                                              ; preds = %134, %131
  %140 = load %struct.TYPE_17__*, %struct.TYPE_17__** %5, align 8
  %141 = load i8*, i8** %11, align 8
  call void @llvm.stackrestore(i8* %141)
  ret %struct.TYPE_17__* %140
}

declare dso_local i32 @D2N(i32) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i64 @decNumberIsNegative(%struct.TYPE_17__*) #1

declare dso_local i32 @D2U(i32) #1

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @decNumberCopy(%struct.TYPE_17__*, %struct.TYPE_17__*) #1

declare dso_local i32 @decCompareOp(%struct.TYPE_17__*, %struct.TYPE_17__*, %struct.TYPE_17__*, i32*, i32, i32*) #1

declare dso_local i32 @free(%struct.TYPE_17__*) #1

declare dso_local i32 @decStatus(%struct.TYPE_17__*, i32, i32*) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
